src/objects/Implementation_Checklist__c.object
<CustomObject>
    <description>A checklist used to monitor the rollout of referral GP offices</description>
    <fields>
        <fullName>Account_created_for_Admin_user_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account created for Admin user (s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Admin_1_email_address__c</fullName>
        <label>Admin (1) email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_1_name__c</fullName>
        <label>Admin (1) name (first &amp; last)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_1_role_title__c</fullName>
        <label>Admin (1) role/title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_2_email_address__c</fullName>
        <label>Admin (2) email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Admin_2_name_first_last__c</fullName>
        <label>Admin (2) name (first &amp; last)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_2_role_title__c</fullName>
        <label>Admin (2) role/title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_trained_to_enroll_new_users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin trained to enroll new users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asked_Kip_to_contact_GP_re_website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asked Kip to contact GP re: website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_contacts_GP_re_PSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS contacts GP re: PSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CV_Notes_1__c</fullName>
        <label>CV Notes (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Notes_2__c</fullName>
        <label>CV Notes (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CV_Notes_3__c</fullName>
        <label>CV Notes (3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_notes__c</fullName>
        <label>Call notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearTrainU_notes_1__c</fullName>
        <label>ClearTrainU notes (1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearTrainU_notes_2__c</fullName>
        <label>ClearTrainU notes (2)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearTrainU_notes_3__c</fullName>
        <label>ClearTrainU notes (3)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearViewTV_Notes__c</fullName>
        <label>ClearViewTV Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClearWeb_notes__c</fullName>
        <label>ClearWeb notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_GP_knows_how_to_get_leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm GP knows how to get leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_GP_knows_how_to_send_leads__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm GP knows how to send leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_PSA_request_sent_to_CCMS_Legal__c</fullName>
        <label>Date PSA request sent to CCMS Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSA_request_was_sent_to_CCMS_Legal__c</fullName>
        <formula>Date_PSA_request_sent_to_CCMS_Legal__c</formula>
        <label>Date PSA request was sent to CCMS Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PSA_sent_to_GP__c</fullName>
        <label>PSA Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed_by_CC__c</fullName>
        <label>Date Signed by Practice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Signed_by_GP__c</fullName>
        <label>Date Signed by GP</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_enrollment_email_sent__c</fullName>
        <label>Date enrollment email sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_request_send_to_Kip__c</fullName>
        <label>Date request send to Kip</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Practice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GP office the checklist is tied to</description>
        <label>Dental Practice</label>
        <referenceTo>Dental_Practice__c</referenceTo>
        <relationshipLabel>Implementation Checklists</relationshipLabel>
        <relationshipName>Implementation_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Does_the_practice_use_appt_reminder_sw__c</fullName>
        <label>Does the practice use appt reminder sw?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enrollment_Link_Admin__c</fullName>
        <label>Enrollment Link (Admin)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrollment_Link_Team_Member__c</fullName>
        <label>Enrollment Link (Team Member)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Enrollment_email_sent_to_Admin_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CTU Enrollment email sent to Admin (s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Explain_why_CV_is_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Explain why CV is required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitate_install_w_Ger_GP_staff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facilitate w/ Ger &amp; GP staff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Admin_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Admin User (s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_which_system_does_GP_use__c</fullName>
        <label>If yes, which system is used?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_location_established__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Office location established</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_Notes__c</fullName>
        <label>PSA Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_URL__c</fullName>
        <label>PSA URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PSA_request_sent_to_CCMS_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA request sent to CCMS Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_sent_to_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA sent to GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_signed_by_CC_Doctor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA signed by Practice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSA_signed_by_GP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PSA signed by GP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secondary_Contact_Role__c</fullName>
        <label>Secondary Contact Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signed_by_Practice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed by CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spoken_w_CC_doctor__c</fullName>
        <label>Spoken w/ CC doctor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spoken_w_CC_doctor_notes__c</fullName>
        <label>Spoken w/ CC doctor (notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Train_Admin_user_to_login_begin_module__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin trained to login &amp; begin modules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visited_CC_Center__c</fullName>
        <label>Visited CC Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visited_CC_Center_notes__c</fullName>
        <label>Visited CC Center (notes)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Was_PSA_request_sent_to_CCMS_Legal__c</fullName>
        <formula>PSA_request_sent_to_CCMS_Legal__c</formula>
        <label>Was PSA request sent to CCMS Legal</label>
        <type>Checkbox</type>
    </fields>
    <label>Implementation Checklist</label>
    <nameField>
        <displayFormat>CL-{0000}</displayFormat>
        <label>Implementation Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>